gccida/g3/emit_indirect_jump
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_indirect_jump/src/optabs.c:4109:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[1159].operand->predicate( loc, ( ( BYTE3( target_flags) & 2) != 0) + 4) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_indirect_jump/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_indirect_jump/src/optabs.c:4109:43: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[1159].operand->predicate( loc, ( ( BYTE3( target_flags) & 2) != 0) + 4) ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_indirect_jump/src/optabs.c:4110:26: error: use of undeclared identifier 'machine_mode'
v1 = copy_to_mode_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), loc); 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_indirect_jump/src/obj/optabs.o] Error 1
